# steveej.github.io

./: shell.nix
slides/common/js/: fonts.css
slides/meetup-futurecloudapplications-2018-06-26/: index.html  serve.sh  slides.md
slides/meetup-futurecloudapplications-2018-06-26/demo/defs/: 3.0_secure-echo.yaml
slides/meetup-futurecloudapplications-2018-06-26/demo/scripts/: generate-client.sh  implement-server.sh  regen-spec.sh  run-client.sh  run-server.sh  run-vscode.sh
slides/meetup-futurecloudapplications-2018-06-26/scripts/: openapi-v3-language-stats.py
slides/msc-thesis/: .index.html.swp  index.html
slides/msc-thesis/gfx/: stack-clash.odg
slides/zhaw-techtalk-0/: index.html  serve.sh
slides/zhaw-techtalk-0/demo/defs/: 2.0_secure-echo.yaml  3.0_secure-echo.yaml
slides/zhaw-techtalk-0/demo/gopath/: .dockerignore  Dockerfile  app.yaml
slides/zhaw-techtalk-0/demo/gopath_prepared/: configure_secure_echo_server.go
slides/zhaw-techtalk-0/demo/scripts/: build-server.sh  gcloud-deploy.sh  generate-server.sh  run-server-docker.sh  run-server.sh  test-server.sh
website/: Cargo.toml
website/src/: lib.rs  main.rs  markdown.rs
website/static/: index.html  styles.css
website/static/content/: .rebuild_index.sh  home.md  index.toml
website/static/content/blog/: Hello_World.md  Hello_World.toml
