[package]
name = "website"
version = "0.1.0"
authors = ["Stefan Junker <mail@stefanjunker.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.11", features = [ "toml" ] }
serde = "1"
serde_derive = "1"
pulldown-cmark = "0.6"
stdweb = "0.4"
failure = "0.1"
web_logger = "0.2"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
